# b2-19-talker

./: README.md
exam1/: CMakeLists.txt  package.xml
exam1/msg/: string_msg_talker.msg
exam1/src/: listener.cpp  listener1.cpp  talker.cpp
